<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF46B5BE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:layout_marginTop="80dp"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/teacher" />
    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/zhanghao"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/reg_hint_account"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/password" />
<!--        android:text="A5260782"-->
        <EditText
            android:id="@+id/mima"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/reg_hint_password1"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="right"
            android:text="@string/register"
            android:textColor="#E91E1E"
            android:textStyle="bold"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/tv_forget"
            android:gravity="center"
            android:textColor="#FF46B5BE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="." />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_login"
        android:background="@drawable/button_write"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF7C824"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_real_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/version_1_0_n"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>