<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FF46B5BE"
    android:gravity="center_horizontal"
    tools:context=".activity.RegActivity">

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/teacher" />
    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/zhanghao"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/reg_hint_account"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/password" />
        <!--        android:text="A5260782"-->
        <EditText
            android:id="@+id/mima1"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/reg_hint_password1"
            android:inputType="textPassword" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/password" />
        <!--        android:text="A5260782"-->
        <EditText
            android:id="@+id/mima2"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/reg_hint_password2"
            android:inputType="textPassword" />

    </LinearLayout>



    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_reg"
        android:background="@drawable/button_write"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF7C824"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20dp"/>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_back"
        android:background="@drawable/button_write"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textColor="#FFF7C824"
        android:text="@string/back"
        android:textStyle="bold"
        android:textSize="20dp"/>


</LinearLayout>